--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -143,8 +143,8 @@ $colorText: #b3b3b3;
   }
 
   @media screen and (max-width: 800px) {
-    padding: 10px;
-    padding-top: 100px;
+    padding: 10px 5px;
+    padding-top: 90px;
 
     .containerInfo {
       gap: 30px;
@@ -153,6 +153,7 @@ $colorText: #b3b3b3;
       p {
         font-size: 20px;
         letter-spacing: 0px;
+        background-color: red;
       }
 
       h1 {
