--- a/src/style/projects.scss
+++ b/src/style/projects.scss
@@ -166,6 +166,8 @@
   min-height: 70%;
   display: flex;
   gap: 30px;
+
+  justify-content: none;
   max-height: 95%;
   overflow: auto;
 
@@ -263,6 +265,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      padding-bottom: 10px;
     }
   }
 }
@@ -426,24 +429,10 @@
 
   .modal {
     width: 90%;
-    // max-height: 95%;
-    overflow: auto;
+    max-height: 95%;
     padding: 20px;
     gap: 25px;
     flex-direction: column-reverse;
-    justify-content: none;
-
-    // /* SCROLL */
-    // &::-webkit-scrollbar {
-    //   width: 7px;
-    // }
-    // &::-webkit-scrollbar-track {
-    //   background-color: transparent;
-    // }
-    // &::-webkit-scrollbar-thumb {
-    //   border-radius: 5px;
-    // }
-    // /* END SCROLL */
 
     .containerLeft {
       gap: 30px;
